fix rendering (z-index)

--- a/src/components/links-list/links-list.scss
+++ b/src/components/links-list/links-list.scss
@@ -56,6 +56,7 @@
     border: 1px solid rgba(31, 32, 65, 0.25);
     box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.25);
     text-transform: capitalize;
+    z-index: 3;
     &_expanded {
       display: block;
     }
